--- a/Filtrage Colaboratif.ipynb
+++ b/Filtrage Colaboratif.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn import model_selection\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import pearsonr as psr"
    ]
   },
   {
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -34,7 +35,7 @@
     "# Reading users file\n",
     "users = pd.read_csv('Data/BX-Users.csv', sep=';', encoding='latin-1')\n",
     "\n",
-    "# Reading movies file\n",
+    "# Reading books file\n",
     "books = pd.read_csv('Data/BX-Books.csv',  sep=';', encoding='latin-1')"
    ]
   },
@@ -61,46 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Data repartition\n",
-    "\n",
-    "user_count = {}\n",
-    "ratings_count = np.zeros(11)\n",
-    "maximum = 0\n",
-    "ID = -1\n",
-    "\n",
-    "for i in range(0,n_users):\n",
-    "    user_count[i+1] = 0\n",
-    "\n",
-    "for element in ratings.values:\n",
-    "    user, ISBN, rating = element\n",
-    "    user_count[user]+=1\n",
-    "    ratings_count[rating]+=1\n",
-    "    if user_count[user]>maximum:\n",
-    "        maximum = user_count[user]\n",
-    "        ID = user"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "val = np.zeros(maximum+1)\n",
-    "for i in range(len(val)):\n",
-    "    val[i]=i\n",
-    "num = np.zeros(maximum+1)\n",
-    "for i in user_count:\n",
-    "    num[user_count[i]]+=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -117,6 +79,33 @@
     }
    ],
    "source": [
+    "# Data repartition (number of ratings per user)\n",
+    "\n",
+    "user_count = {}\n",
+    "ratings_count = np.zeros(11)\n",
+    "maximum = 0\n",
+    "ID = -1\n",
+    "\n",
+    "for i in range(0,n_users):\n",
+    "    user_count[i+1] = 0\n",
+    "\n",
+    "for element in ratings.values:\n",
+    "    user, ISBN, rating = element\n",
+    "    user_count[user]+=1\n",
+    "    ratings_count[rating]+=1\n",
+    "    if user_count[user]>maximum:\n",
+    "        maximum = user_count[user]\n",
+    "        ID = user\n",
+    "\n",
+    "print(maximum)\n",
+    "# Plotting \n",
+    "val = np.zeros(maximum+1)\n",
+    "for i in range(len(val)):\n",
+    "    val[i]=i\n",
+    "num = np.zeros(maximum+1)\n",
+    "for i in user_count:\n",
+    "    num[user_count[i]]+=1\n",
+    "    \n",
     "plt.bar(val[0:11],num[0:11])\n",
     "plt.show()"
    ]
@@ -135,10 +124,13 @@
     }
    ],
    "source": [
+    "# Get the number of users with n ratings or more\n",
+    "n = 5\n",
+    "\n",
     "cc = 0\n",
     "k = 0\n",
     "for i in num:\n",
-    "    if k>=5:\n",
+    "    if k>=n:\n",
     "        cc += int(i)\n",
     "    k+=1\n",
     "print('Number of users with 5 ratings or more:',cc)"
@@ -184,7 +176,8 @@
    "source": [
     "# rating repartition\n",
     "\n",
-    "plt.bar(range(11),ratings_count)"
+    "plt.bar(range(11),ratings_count)\n",
+    "plt.swho()"
    ]
   },
   {
@@ -205,20 +198,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Parameters\n",
     "min_val = 5\n",
     "min_ratings = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Initialisation\n",
     "cleaned_data = ratings.copy()\n",
     "cleaned_users = users.copy()\n",
     "cleaned_books = books.copy()"
@@ -226,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,36 +246,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Users with more than min_val ratings\n",
-    "cleaned_data = cleaned_data[cleaned_data['User-ID'].isin(ratings_per_user.index[ratings_per_user.values >= min_val])]"
+    "# Select data from users with more than min_val ratings\n",
+    "cleaned_data = cleaned_data[cleaned_data['User-ID'].isin(ratings_per_user.index[ratings_per_user.values >= min_val])]\n",
+    "\n",
+    "# Get the selected users\n",
+    "cleaned_users = sorted(cleaned_data['User-ID'].unique())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "mat_train  = pd.pivot_table(cleaned_data, values='Book-Rating', index='User-ID', columns='ISBN')"
+    "# Create the pivot table\n",
+    "mat_train = pd.pivot_table(cleaned_data, values='Book-Rating', index='User-ID', columns='ISBN')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get the users average rating\n",
     "means = {}\n",
     "idx = mat_train.index\n",
     "for i in idx:\n",
@@ -289,10 +282,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Get the books average rating\n",
     "ISBN_means = {}\n",
     "ISBN_list = mat_train.columns\n",
     "for i in ISBN_list:\n",
@@ -308,21 +302,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.stats import pearsonr as psr"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "def pearsons(user1, user2):\n",
-    "    return psr(user1[0], user2[0])[0]"
+    "    return psr(user1, user2)[0]"
    ]
   },
   {
@@ -337,13 +322,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'dict' object has no attribute 'sort'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-40-c04442caa605>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mu\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m{\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mu\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'dict' object has no attribute 'sort'"
+     ]
+    }
+   ],
+   "source": [
+    "u={1:1, 5:3, 3:4}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nan nan nan ... nan nan nan]\n"
+     ]
+    }
+   ],
+   "source": [
+    "u = mat_train[mat_train.index == 99].values[0]\n",
+    "print(u)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def predict(user):\n",
-    "    for i in ISBN_list:\n",
-    "        prediction = pred\n",
+    "def predict(user, k, table):\n",
+    "    prediction = 0\n",
+    "    sim_dic = {}\n",
+    "    user_t = table[mat_train.index = user].values[0]\n",
+    "    \n",
+    "    for user2 in cleaned_users:\n",
+    "        user2_t = table[mat_train.index = user2].values[0]\n",
+    "        sim_dic[user2] = sim(user_t, user2_t)\n",
+    "        \n",
+    "    \n",
+    "    \n",
     "pred(u,m)"
    ]
   },
