--- a/Notebook_coor.ipynb
+++ b/Notebook_coor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 157,
    "metadata": {
     "scrolled": true
    },
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 161,
    "metadata": {
     "scrolled": true
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,11 +442,9 @@
     "        Predicts the books with the highest probable ratings for the user\n",
     "        \"\"\"\n",
     "        prediction = self.predict(user, k).values[0]\n",
-    "        return prediction\n",
     "        idx = np.argpartition(prediction, -n)[-n:]\n",
     "        idx = idx[np.argsort(prediction[idx])]\n",
-    "        best = self.table.columns[idx]\n",
-    "        return best"
+    "        return self.table.columns[idx]"
    ]
   },
   {
@@ -458,25 +456,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Predictor has been set up\n",
-      "user 245568 will be predicted\n",
-      "intersting books ISBN for245568: [5.46059313 6.46059313 6.94444444 ... 6.94444444 6.94444444 6.18834688]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Predictor = User_User_prediction(books, table, means)\n",
-    "user = random.choice(table.index)\n",
-    "print(\"user \"+str(user)+\" will be predicted\")\n",
-    "interesting_books = Predictor.process(user)\n",
-    "print(\"intersting books ISBN for \" + str(user) +\":\", interesting_books)"
+    "Predictor = User_User_prediction(books, table, means)"
    ]
   },
   {
@@ -484,7 +468,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Select a user\n",
+    "user = random.choice(table.index)\n",
+    "print(\"user \"+str(user)+\" will be predicted\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predictor has been set up\n",
+      "user 8245 will be predicted\n",
+      "intersting books ISBN for 8245: Index(['2266004034', '1551669021', '3453162994', '8817134899', '0743418727'], dtype='object', name='ISBN')\n"
+     ]
+    }
+   ],
+   "source": [
+    "interesting_books = Predictor.process(user)\n",
+    "print(\"intersting books ISBN for \" + str(user) +\":\", list(interesting_books))"
+   ]
   }
  ],
  "metadata": {
