added markdown to AmazonScrapping

--- a/AmazonScrapping.ipynb
+++ b/AmazonScrapping.ipynb
@@ -4,7 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importing librairies"
+    "## <a id='I'></a><h2 style=\"text-align=center; font-size=220\">  <span class=\"label label-info\" style=\"text-align=center;\"> Data enrichment by scrapping Amazon book pages</span>  </h2> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">\n",
+    "<div class=\"label label-warning\">NOTICE:</div><br>\n",
+    "<li>Selenium driver is REQUIRED</li>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  <a id='ILaNA'></a> <div style=\"font-size:120%;  margin-left: 25px;\"> <span class=\"label label-success\"> Importing Libraries</span></div>"
    ]
   },
   {
@@ -35,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Defining Base url"
+    "###  <a id='ILaNA'></a> <div style=\"font-size:120%;  margin-left: 25px;\"> <span class=\"label label-success\"> Defining Base url</span></div>"
    ]
   },
   {
@@ -51,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reading the first 10 rows of book dataset (for demonstration purposes)"
+    "###  <a id='ILaNA'></a> <div style=\"font-size:120%;  margin-left: 25px;\"> <span class=\"label label-success\">Reading the first 10 rows (for demonstration purposes)</span></div>"
    ]
   },
   {
@@ -137,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creating columns for the features that we are going to fill"
+    "###  <a id='ILaNA'></a> <div style=\"font-size:120%;  margin-left: 25px;\"> <span class=\"label label-success\">Creating columns for the features that we are going to fill</span></div>"
    ]
   },
   {
@@ -278,7 +295,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Defining XPaths that we are going to use to look for the information"
+    "###  <a id='ILaNA'></a> <div style=\"font-size:120%;  margin-left: 25px;\"> <span class=\"label label-success\">Defining XPaths that we are going to use to look for the information</span></div>"
    ]
   },
   {
@@ -398,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# with double check"
+    "###  <a id='ILaNA'></a> <div style=\"font-size:120%;  margin-left: 25px;\"> <span class=\"label label-success\">Scrapping Amazon with double check: if we don't find all the information in the first page, look for it in another page</span></div>"
    ]
   },
   {
@@ -1535,7 +1552,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Checking missing values count"
+    "###  <a id='ILaNA'></a> <div style=\"font-size:120%;  margin-left: 25px;\"> <span class=\"label label-success\">Checking the result (missing information)</span></div>"
    ]
   },
   {
@@ -1563,6 +1580,14 @@
    ],
    "source": [
     "books.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class='alert alert-info'>\n",
+    "This was just a demonstration. The process takes a lot of time, depending on the internet connection speed and the processing power of the computer. We can launch more than one navigator to scrap more than one page at once.</div>"
    ]
   }
  ],
