added markdown notes to Notebook coor

--- a/Notebook_coor.ipynb
+++ b/Notebook_coor.ipynb
@@ -1,11 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Book recommandation\n",
+    "### By Anass El Idrissi, Seddik Mekki and Tanguy Morelle"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  <a id='ILaNA'></a> <div style=\"font-size:120%;  margin-left: 25px;\"> <span class=\"label label-success\"> Importing Libraries and notebook adjustment</span></div>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import math\n",
@@ -23,7 +40,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Setup and Analysis"
+    "## <a id='I'></a><h2 style=\"text-align=center; font-size=220\">  <span class=\"label label-info\" style=\"text-align=center;\"> I. Data Setup and Analysis</span>  </h2> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  <a id='I.1'></a> <div style=\"font-size:120%;  margin-left: 25px;\"> <span class=\"label label-success\">I.1</span>  <span class=\"label label-success\"> Loading data as a dataframes</span></div>\n",
+    "\n"
    ]
   },
   {
@@ -42,6 +67,21 @@
     "\n",
     "# Reading books file\n",
     "books = pd.read_csv('Data/BX-Books.csv',  sep=';', encoding='latin-1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  <a id='I.2'></a> <div style=\"font-size:120%;  margin-left: 25px;\"> <span class=\"label label-success\">I.2</span>  <span class=\"label label-success\"> Checking user repartion</span></div>\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number of users with ratings"
    ]
   },
   {
@@ -162,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +211,7 @@
        "Text(0, 0.5, 'Number of users')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -200,7 +240,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The percentage of users with 0 ratings is 62%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"The percentage of users with 0 ratings is {}%\".format(int(len(users[users['rating_count']==0])*100/len(users))))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class='alert alert-info'>\n",
+    "We notice that a lot of the users (62%) did not rate any book. We will remove them from our dataset.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Number of 0 ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +282,7 @@
        "Text(0, 0.5, 'Number of users')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -232,6 +305,32 @@
     "sns.countplot(x = 'Book-Rating',  data = ratings, ax = ax1)\n",
     "ax1.set_title('number of entries per score level')\n",
     "ax1.set_ylabel('Number of users')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The percentage of ratings with value 0 is: 62 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The percentage of ratings with value 0 is:', int(100*len(ratings[ratings['Book-Rating']==0])/len(ratings)),'%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class='alert alert-info'>\n",
+    "We notice that a lot of ratings has value = 0 (62%) meaning that the user did not rate the book. We will remove them from our dataset.\n",
+    "</div>"
    ]
   },
   {
@@ -332,12 +431,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Clearing"
+    "## <a id='II'></a><h2 style=\"text-align=center; font-size=220\">  <span class=\"label label-info\" style=\"text-align=center;\"> II. Data clearing</span>  </h2> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  <a id='II.1'></a> <div style=\"font-size:120%;  margin-left: 25px;\"> <span class=\"label label-success\">II.1</span>  <span class=\"label label-success\"> Setting clearing parameters</span></div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,8 +453,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  <a id='II.1'></a> <div style=\"font-size:120%;  margin-left: 25px;\"> <span class=\"label label-success\">II.1</span>  <span class=\"label label-success\"> Removing 0 ratings entries and users with no ratings </span></div>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,8 +510,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a id='III'></a><h2 style=\"text-align=center; font-size=220\">  <span class=\"label label-info\" style=\"text-align=center;\"> III. Preparing recommandation model</span>  </h2> "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,12 +566,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# User - User"
+    "###  <a id='III.1'></a> <div style=\"font-size:120%;  margin-left: 25px;\"> <span class=\"label label-success\">III.1</span>  <span class=\"label label-success\"> User-User recommandation </span></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class='alert alert-info'>\n",
+    "Recommanding books based on Pearson correletion between 2 users</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,12 +687,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now pick a random user and predict his scores !"
+    "<div class='alert alert-info'>\n",
+    "We can now pick a random user and predict his scores !</div>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -581,14 +710,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "user 131317 will be predicted\n"
+      "user 265620 will be predicted\n"
      ]
     }
    ],
@@ -600,20 +729,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "intersting books ISBN for 265620: ['0671894455', '0349101779', '0099448823', '0486406482', '0684809001']\n"
+     ]
+    }
+   ],
    "source": [
     "interesting_books = Predictor.process(user)\n",
     "print(\"intersting books ISBN for \" + str(user) +\":\", list(interesting_books))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
