--- a/Data Enrichment and Book Description Similarity.ipynb
+++ b/Data Enrichment and Book Description Similarity.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <a id='I'></a><h2 style=\"text-align=center; font-size=220\">  <span class=\"label label-info\" style=\"text-align=center;\"> Data enrichment by scrapping Amazon book pages</span>  </h2> "
+    "<div class=\"alert alert-warning\">\n",
+    "<div class=\"label label-warning\">NOTICE:</div><br>\n",
+    "<li>Selenium driver is REQUIRED: It allows us to manipulate an internet navigator (in this case Chrome) using Python code. This method is used to simulate a human use of the navigator, so it doesn't get blocked by websites (Amazon for example).</li>\n",
+    "</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-warning\">\n",
-    "<div class=\"label label-warning\">NOTICE:</div><br>\n",
-    "<li>Selenium driver is REQUIRED</li>\n",
-    "</div>"
+    "## <a id='I'></a><h2 style=\"text-align=center; font-size=220\">  <span class=\"label label-info\" style=\"text-align=center;\"> I. Searching for Name,\tCategory,\tAuthor,\tLanguage,\tPages,\tand Dimensions information</span>  </h2> "
    ]
   },
   {
@@ -104,27 +104,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0195153448</td>\n",
+       "      <td>195153448</td>\n",
        "      <td>2002</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0002005018</td>\n",
+       "      <td>2005018</td>\n",
        "      <td>2001</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0060973129</td>\n",
+       "      <td>60973129</td>\n",
        "      <td>1991</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0374157065</td>\n",
+       "      <td>374157065</td>\n",
        "      <td>1999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0393045218</td>\n",
+       "      <td>393045218</td>\n",
        "      <td>1999</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -132,12 +132,12 @@
        "</div>"
       ],
       "text/plain": [
-       "         ISBN  Year-Of-Publication\n",
-       "0  0195153448                 2002\n",
-       "1  0002005018                 2001\n",
-       "2  0060973129                 1991\n",
-       "3  0374157065                 1999\n",
-       "4  0393045218                 1999"
+       "        ISBN  Year-Of-Publication\n",
+       "0  195153448                 2002\n",
+       "1    2005018                 2001\n",
+       "2   60973129                 1991\n",
+       "3  374157065                 1999\n",
+       "4  393045218                 1999"
       ]
      },
      "execution_count": 4,
@@ -204,7 +204,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0195153448</th>\n",
+       "      <th>195153448</th>\n",
        "      <td>2002</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -214,7 +214,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0002005018</th>\n",
+       "      <th>2005018</th>\n",
        "      <td>2001</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -224,7 +224,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0060973129</th>\n",
+       "      <th>60973129</th>\n",
        "      <td>1991</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -234,7 +234,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0374157065</th>\n",
+       "      <th>374157065</th>\n",
        "      <td>1999</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -244,7 +244,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0393045218</th>\n",
+       "      <th>393045218</th>\n",
        "      <td>1999</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -258,21 +258,21 @@
        "</div>"
       ],
       "text/plain": [
-       "            Year-Of-Publication  Name  Category  Author  Language  Pages  \\\n",
-       "ISBN                                                                       \n",
-       "0195153448                 2002   NaN       NaN     NaN       NaN    NaN   \n",
-       "0002005018                 2001   NaN       NaN     NaN       NaN    NaN   \n",
-       "0060973129                 1991   NaN       NaN     NaN       NaN    NaN   \n",
-       "0374157065                 1999   NaN       NaN     NaN       NaN    NaN   \n",
-       "0393045218                 1999   NaN       NaN     NaN       NaN    NaN   \n",
+       "           Year-Of-Publication  Name  Category  Author  Language  Pages  \\\n",
+       "ISBN                                                                      \n",
+       "195153448                 2002   NaN       NaN     NaN       NaN    NaN   \n",
+       "2005018                   2001   NaN       NaN     NaN       NaN    NaN   \n",
+       "60973129                  1991   NaN       NaN     NaN       NaN    NaN   \n",
+       "374157065                 1999   NaN       NaN     NaN       NaN    NaN   \n",
+       "393045218                 1999   NaN       NaN     NaN       NaN    NaN   \n",
        "\n",
-       "            Dimensions  \n",
-       "ISBN                    \n",
-       "0195153448         NaN  \n",
-       "0002005018         NaN  \n",
-       "0060973129         NaN  \n",
-       "0374157065         NaN  \n",
-       "0393045218         NaN  "
+       "           Dimensions  \n",
+       "ISBN                   \n",
+       "195153448         NaN  \n",
+       "2005018           NaN  \n",
+       "60973129          NaN  \n",
+       "374157065         NaN  \n",
+       "393045218         NaN  "
       ]
      },
      "execution_count": 5,
@@ -409,6 +409,13 @@
     "\n",
     "        retry_counter += 1\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a id='I'></a><h2 style=\"text-align=center; font-size=220\">  <span class=\"label label-info\" style=\"text-align=center;\"> I. Searching for Name,\tCategory,\tAuthor,\tLanguage,\tPages,\tand Dimensions information</span>  </h2> "
    ]
   },
   {
@@ -1586,8 +1593,144 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## <a id='II'></a><h2 style=\"text-align=center; font-size=220\">  <span class=\"label label-info\" style=\"text-align=center;\"> II Scrapping BookFinder.com to get descriptions about books to be used for content based recommendation</span>  </h2> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting Book description from the website bookfinder.com"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "\n",
+    "chrome_path = r'/Users/rarecarat/Desktop/Python/Scraping_techniques/chromedriver'\n",
+    "driver = webdriver.Chrome(chrome_path)\n",
+    "\n",
+    "isbns = list(books.index):\n",
+    "descriptions = []\n",
+    "for isbn in isbns:\n",
+    "    \n",
+    "    driver.get(\"https://www.bookfinder.com/isbn_search/\")\n",
+    "\n",
+    "    driver.implicitly_wait(3)\n",
+    "\n",
+    "    driver.find_element_by_xpath(\"\"\"//*[@name=\"isbn\"]\"\"\").send_keys(isbn)\n",
+    "    driver.find_element_by_xpath(\"\"\"//*[@id=\"submitBtn\"]\"\"\").click()\n",
+    "\n",
+    "    driver.implicitly_wait(3)\n",
+    "\n",
+    "    content = driver.find_element_by_xpath(\"\"\"//*[@id=\"bookSummary\"]\"\"\")\n",
+    "    data = BeautifulSoup(content.get_attribute('innerHTML'), \"lxml\")\n",
+    "    \n",
+    "    descriptions.append(data.text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "books['Description'] = descriptions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class='alert alert-info'>\n",
     "This was just a demonstration. The process takes a lot of time, depending on the internet connection speed and the processing power of the computer. We can launch more than one navigator to scrap more than one page at once.</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <a id='III'></a><h2 style=\"text-align=center; font-size=220\">  <span class=\"label label-info\" style=\"text-align=center;\"> III Measuring the similarity between two books based by using the cosine distance between their Description</span>  </h2> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This can be a way to perform content based recommandation: we can suggest to the end user the k books whose descriptions are the most similar to that of the book chosen by the user."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re, math\n",
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "WORD = re.compile(r'\\w+')\n",
+    "\n",
+    "\n",
+    "def get_cosine(vec1, vec2):\n",
+    "    \n",
+    "    intersection = set(vec1.keys()) & set(vec2.keys())\n",
+    "    numerator = sum([vec1[x] * vec2[x] for x in intersection])\n",
+    "\n",
+    "    sum1 = sum([vec1[x]**2 for x in vec1.keys()])\n",
+    "    sum2 = sum([vec2[x]**2 for x in vec2.keys()])\n",
+    "    denominator = math.sqrt(sum1) * math.sqrt(sum2)\n",
+    "\n",
+    "    if not denominator:\n",
+    "        return 0.0\n",
+    "    else:\n",
+    "        return float(numerator) / denominator\n",
+    "\n",
+    "def text_to_vector(text):\n",
+    "    words = WORD.findall(text)\n",
+    "    return Counter(words)\n",
+    "\n",
+    "\n",
+    "Harry_potter_1 = \"\"\"It was always difficult being Harry Potter and it isn't much easier now that he is an overworked employee of the Ministry of Magic, a husband, and father of three school-age children.\n",
+    "While Harry grapples with a past that refuses to stay where it belongs, his youngest son Albus must struggle with the weight of a family legacy he never wanted. As past and present fuse ominously, both father and son learn the uncomfortable truth: sometimes, darkness comes from unexpected places.\n",
+    "\n",
+    "The playscript for Harry Potter and the Cursed Child was originally released as a 'special rehearsal edition' alongside the opening of Jack Thorne's play in London's West End in summer 2016. Based on an original story by J.K. Rowling, John Tiffany and Jack Thorne, the play opened to rapturous reviews from theatregoers and critics alike, while the official playscript became an immediate global bestseller.\n",
+    "\n",
+    "This revised paperback edition updates the 'special rehearsal edition' with the conclusive and final dialogue from the play, which has subtly changed since its rehearsals, as well as a conversation piece between director John Tiffany and writer Jack Thorne, who share stories and insights about reading playscripts. This edition also includes useful background information including the Potter family tree and a timeline of events from the Wizarding World prior to the beginning of Harry Potter and the Cursed Child.\"\"\"\n",
+    "\n",
+    "\n",
+    "Harry_potter_2 = \"\"\"Harry Potter has never even heard of Hogwarts when the letters start dropping on the doormat at number four, Privet Drive. Addressed in green ink on yellowish parchment with a purple seal, they are swiftly confiscated by his grisly aunt and uncle. Then, on Harry's eleventh birthday, a great beetle-eyed giant of a man called Rubeus Hagrid bursts in with some astonishing news: Harry Potter is a wizard, and he has a place at Hogwarts School of Witchcraft and Wizardry. An incredible adventure is about to begin! These new editions of the classic and internationally bestselling, multi-award-winning series feature instantly pick-up-able new jackets by Jonny Duddle, with huge child appeal, to bring Harry Potter to the next generation of readers. It's time to pass the magic on\"\"\"\n",
+    "\n",
+    "\n",
+    "Star_wars = \"\"\"A Jedi must be a fearless warrior, a guardian of justice, and a scholar in the ways of the Force. But perhaps a Jedi’s most essential duty is to pass on what they have learned. Master Yoda trained Dooku; Dooku trained Qui-Gon Jinn; and now Qui-Gon has a Padawan of his own. But while Qui-Gon has faced all manner of threats and danger as a Jedi, nothing has ever scared him like the thought of failing his apprentice.\"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "vector1 = text_to_vector(Harry_potter_1)\n",
+    "vector2 = text_to_vector(Harry_potter_2)\n",
+    "\n",
+    "vector3 = text_to_vector(Star_wars)\n",
+    "\n",
+    "cosine1 = get_cosine(vector1, vector2)\n",
+    "cosine2 = get_cosine(vector2, vector3)\n",
+    "\n",
+    "print ('Cosine distance between Harry Potter 1 and Harry Potter 2 reviews is:', cosine1)\n",
+    "print ('Cosine distance between Harry Potter 1 and Star wars reviews is:', cosine2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class='alert alert-info'>\n",
+    "This measured distance can be used later for Item-Item recommandation: REcommanding books based on the history of books that the user has already read</div>"
    ]
   }
  ],
