--- a/Data Enrichment and Book Description Similarity.ipynb
+++ b/Data Enrichment and Book Description Similarity.ipynb
@@ -6,8 +6,17 @@
    "source": [
     "<div class=\"alert alert-warning\">\n",
     "<div class=\"label label-warning\">NOTICE:</div><br>\n",
-    "<li>Selenium driver is REQUIRED: It allows us to manipulate an internet navigator (in this case Chrome) using Python code. This method is used to simulate a human use of the navigator, so it doesn't get blocked by websites (Amazon for example).</li>\n",
+    "<li>Chrome driver is REQUIRED: It is used by Selenium to manipulate an internet navigator using Python code. This method is used to simulate a human use of the navigator, so it doesn't get blocked by websites (Amazon for example).</li>\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CHROME_PATH = \"C:/Users/Seddik's PC/Desktop/Cours/Fun/Selenium/chromedriver.exe\""
    ]
   },
   {
@@ -552,7 +561,7 @@
     "    prefs = {\"profile.managed_default_content_settings.images\": 2}\n",
     "    chrome_options.add_experimental_option(\"prefs\", prefs)\n",
     "\n",
-    "    driver = webdriver.Chrome(chrome_options=chrome_options, executable_path=\"C:/Users/Seddik's PC/Desktop/Cours/Fun/Selenium/chromedriver.exe\")\n",
+    "    driver = webdriver.Chrome(chrome_options=chrome_options, executable_path=CHROME_PATH)\n",
     "\n",
     "    driver.maximize_window()\n",
     "    for isbn in tqdm(books.index):\n",
@@ -1613,8 +1622,17 @@
     "from bs4 import BeautifulSoup\n",
     "\n",
     "\n",
-    "chrome_path = r'/Users/rarecarat/Desktop/Python/Scraping_techniques/chromedriver'\n",
-    "driver = webdriver.Chrome(chrome_path)\n",
+    "# instantiate a chrome options object so you can set the size and headless preference\n",
+    "chrome_options = Options()\n",
+    "chrome_options.add_argument(\"--headless\")\n",
+    "chrome_options.add_argument(\"--window-size=1920x1080\")\n",
+    "\n",
+    "# Chrome without pictures for reduced loading time\n",
+    "chrome_options = webdriver.ChromeOptions()\n",
+    "prefs = {\"profile.managed_default_content_settings.images\": 2}\n",
+    "chrome_options.add_experimental_option(\"prefs\", prefs)\n",
+    "\n",
+    "driver = webdriver.Chrome(chrome_options=chrome_options, executable_path=CHROME_PATH)\n",
     "\n",
     "isbns = list(books.index):\n",
     "descriptions = []\n",
@@ -1668,9 +1686,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cosine distance between Harry Potter 1 and Harry Potter 2 reviews is: 0.5723332526830462\n",
+      "Cosine distance between Harry Potter 1 and Star wars reviews is: 0.48625899626414265\n"
+     ]
+    }
+   ],
    "source": [
     "import re, math\n",
     "from collections import Counter\n",
